fix:  Wrong colors for poem stats and syllables in dark mode #11

--- a/src/sass/components/_notebook.scss
+++ b/src/sass/components/_notebook.scss
@@ -86,6 +86,7 @@
 	z-index: 1;
 	right: 5px;
 	top: 5px;
+	color: var(--notebook-text-color);
 }
 
 .poem-syllable-count {
@@ -94,4 +95,5 @@
 
 .poem-syllable-rows {
 	opacity: 0.5;
+	color: var(--notebook-text-color);
 }
